--- a/mm/overview.tex
+++ b/mm/overview.tex
@@ -1,5 +1,14 @@
-\section{Overview}
+\section{Introduction}
+Officially completed in September 2017, the 12 GeV upgrade project of Jefferson Lab consists not only in the increase of energy of its Continuous Electron Beam Accelerator Facility (CEBAF) from 6 to 12 GeV, but also in the construction or upgrades of its experimental Halls. Hall B, which is the focus of this status report, updated its existing CLAS spectrometer with new magnets and detectors to capture the more forward-focused reaction products at an increased luminosity. This new spectrometer called CLAS12 became fully operational in the Fall of 2017 and started its engineering run in December. CLAS12 is now taking data as part of the run group A, which focus is on the study of the 3-dimensional structure of the nucleon using Deeply Virtual Compton Scattering (DVCS) on the proton.
 
-mm overview description \cite{einstein}
+As early as 2006, the Irfu group started studying the feasibility of a Central Tracker for CLAS12 based on the use of cylindrical layers of Micromegas detectors in addition to the Silicon Vertex Tracker being designed at JLab. In 2010, a full proposal was submitted to the CSTS as well as to the JLab management and it was decided that the baseline design for the central tracker would consist in 3 double-layers of Silicon Vertex Tracker (SVT) displayed in polyhedral arrangement, followed by six layers of cylindrical Barrel Micromegas Tracker (BMT), which benefits from the specificities of both technologies as foreseen in early simulations. This central tracker would also be completed with a Forward Micromegas Tracker (FMT) in order to tag forward tracks and improve the vertex and angle resolutions in the fringe field of the solenoid magnet. This forward part consists in 6 identical Micromegas disks. This report focuses on the status of the CLAS12 Micromegas tracker project, including both the BMT and FMT systems, recently fully installed and commissioned. The Barrel and the Forward Micromegas Tracker forms together the Micromegas Vertex Tracker.
 
+\section{System description}
+
+\subsection{General}
+
+
+The Barrel Micromegas Tracker consists of six layers of cylindrical detectors, three with strips along the beam axis (Z strips) and three with circular strips (C strips) perpendicular to the beam axis. Each layer is made of three curved 120$^o$ detectors. A total of 18 curved detectors are assembled on a carbon structure to complete the Barrel. The Micromegas detectors are ``resistive'', a coating of resistive material is deposited on the top of the readout strip thus allowing to operate the detectors without spark at high rate. In this configuration the mesh is grounded and the high voltage for amplification is positive on the resistive strips.
+
+The Forward Micromegas Tracker consists of six flat Micromegas disks stacked together. The disks are all identical and assembled with a 60$^o$ rotation with respect to one another giving 3 angles of strips (0$^o$, 60$^o$ and 120$^o$). The resulting Micromegas Forward tracker is attached to the Barrel end flange. Figure 1 displays a cut view showing all types of detectors for both BMT and FMT.
 
