--- a/mm/bibfile.bib
+++ b/mm/bibfile.bib
@@ -1,25 +1,15 @@
-@article{einstein,
-author =       "Albert Einstein",
-title =        "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
-[{On} the electrodynamics of moving bodies]",
-journal =      "Annalen der Physik",
-volume =       "322",
-number =       "10",
-pages =        "891--921",
-year =         "1905",
-DOI =          "http://dx.doi.org/10.1002/andp.19053221004"
-}
 
-@book{latexcompanion,
-author    = "Michel Goossens and Frank Mittelbach and Alexander Samarin",
-title     = "The \LaTeX\ Companion",
-year      = "1993",
-publisher = "Addison-Wesley",
-address   = "Reading, Massachusetts"
-}
-
-@misc{knuthwebsite,
-author    = "Donald Knuth",
-title     = "Knuth: Computers and Typesetting",
-url       = "http://www-cs-faculty.stanford.edu/\~{}uno/abcde.html"
+@article{KONCZYKOWSKI2010274,
+title = "Measurements of the Lorentz angle with a Micromegas detector in high transverse magnetic fields",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment",
+volume = "612",
+number = "2",
+pages = "274 - 277",
+year = "2010",
+issn = "0168-9002",
+doi = "https://doi.org/10.1016/j.nima.2009.10.105",
+url = "http://www.sciencedirect.com/science/article/pii/S0168900209020567",
+author = "P. Konczykowski and S. Aune and J. Ball and M. El Yakoubi and C. Lahonde-Hamdoun and O. Meunier and S. Procureur and F. Sabatié and S. Cazaux and E. Delagnes and S. Lhenoret and A. Mohamed",
+keywords = "Micro-pattern gaseous detectors, Micromegas, Magnetic field, Lorentz angle",
+abstract = "We measured the Lorentz angle in an argon +10% isobutane mixture using a Micromegas detector placed inside the CLAS-DVCS solenoid of Hall B at the Jefferson Laboratory. The primary goal of these tests was to validate Magboltz-based simulations developed for the implementation of Micromegas bulk detectors in the Central Tracker of the future CLAS12 spectrometer. We used a UV laser to extract electrons from the drift electrode of the detector. After amplification, the electrons were collected on the readout strips and the signals recorded. The difference of position observed between runs with and without magnetic field provided a direct measurement of the Lorentz angle. Scans in the drift electric field were performed for the first time in very high magnetic fields, up to 4.2T, and a good agreement was observed with the Magboltz predictions."
 }
